# Refureku

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  _allocator_8h_source.html  _archetype_8h_source.html  _archetype_registerer_8h_source.html  _arg_count_mismatch_8h_source.html  _arg_type_mismatch_8h_source.html  _bad_namespace_format_8h_source.html  _cast_8h_source.html  _class_template_8h_source.html  _class_template_instantiation_8h_source.html  _class_template_instantiation_registerer_8h_source.html  _code_generation_helpers_8h_source.html  _config_8h_source.html  _const_violation_8h_source.html  _copy_constness_8h_source.html  _database_8h_source.html  _default_entity_registerer_8h_source.html  _disable_warning_macros_8h_source.html  _e_access_specifier_8h_source.html  _e_class_kind_8h_source.html  _e_entity_kind_8h_source.html  _e_field_flags_8h_source.html  _e_function_flags_8h_source.html  _e_method_flags_8h_source.html  _e_template_parameter_kind_8h_source.html  _e_type_part_descriptor_8h_source.html  _e_var_flags_8h_source.html  _entity_8h_source.html  _entity_cast_8h_source.html  _enum_8h_source.html  _enum_macros_8h_source.html  _enum_value_8h_source.html  _field_8h_source.html  _field_base_8h_source.html  (+297 more)
Refureku/: CMakeLists.txt
Refureku/Example/: CMakeLists.txt
Refureku/Example/Include/: CustomRefurekuMacros.h  ExampleClass.h
Refureku/Example/Source/: main.cpp
Refureku/Examples/: CMakeLists.txt  RefurekuIntegrationWithVS.sln  RefurekuIntegrationWithVS.vcxproj
Refureku/Examples/GeneratorIntegration/: CMakeLists.txt  GeneratorIntegration.sln  GeneratorIntegration.vcxproj
Refureku/Examples/GeneratorIntegration/Include/Dir2/: Class2.h  Struct1.h
Refureku/Examples/GeneratorIntegration/Source/: main.cpp
Refureku/Examples/Include/: Enum1.h
Refureku/Examples/Include/Dir1/: Class1.h
Refureku/Examples/Include/Dir2/: Struct1.h
Refureku/Examples/SimpleIntegration/: CMakeLists.txt  RefurekuIntegrationWithVS.vcxproj
Refureku/Examples/SimpleIntegration/Include/: Enum1.h
Refureku/Examples/SimpleIntegration/Include/Dir1/: Class1.h
Refureku/Examples/SimpleIntegration/Include/Dir2/: Class2.h
Refureku/Examples/SimpleIntegration/Source/: main.cpp
Refureku/Examples/Source/: main.cpp
Refureku/Generator/: CMakeLists.txt  RefurekuSettings.toml
Refureku/Generator/Include/: FileGenerator.h  FileParser.h  GeneratedClassCodeTemplate.h  GeneratedCodeTemplate.h  GeneratedEntityCodeTemplate.h  GeneratedEnumCodeTemplate.h  GeneratedNamespaceCodeTemplate.h  Keywords.h  NativeProperties.h
Refureku/Generator/Include/Properties/: CustomInstantiatorPropertyRule.h  DynamicGetArchetypePropertyRule.h  RangePropertyRule.h
Refureku/Generator/Include/RefurekuGenerator/: FileGenerator.h  FileParser.h  GeneratedClassCodeTemplate.h  GeneratedEntityCodeTemplate.h  GeneratedEnumCodeTemplate.h  GeneratedFunctionCodeTemplate.h  GeneratedNamespaceCodeTemplate.h  GeneratedVariableCodeTemplate.h  Helpers.h  Helpers.inl
Refureku/Generator/Include/RefurekuGenerator/CodeGen/: CodeGenManager.h  FileGenerationUnit.h  FileGenerator.h  GeneratedClassCodeTemplate.h  GeneratedEntityCodeTemplate.h  GeneratedEntityCodeTemplate.inl  GeneratedEnumCodeTemplate.h  GeneratedFunctionCodeTemplate.h  GeneratedNamespaceCodeTemplate.h  GeneratedVariableCodeTemplate.h  MacroCodeGenUnitSettings.h  ReflectionCodeGenModule.h  ReflectionCodeGenModule.inl  ReflectionCodeGenModule2.h  ReflectionCodeGenModule2.inl
Refureku/Generator/Include/RefurekuGenerator/Misc/: Helpers.h  Helpers.inl
Refureku/Generator/Include/RefurekuGenerator/Parsing/: FileParser.h  FileParserFactory.h  FileParserFactory.inl
Refureku/Generator/Include/RefurekuGenerator/Properties/: CustomInstantiatorPropertyCodeGen.h  CustomInstantiatorPropertyRule.h  DefaultComplexPropertyRule.h  DefaultSimplePropertyRule.h  DynamicGetArchetypePropertyRule.h  ECodeGenLocation.h  InstantiatorPropertyCodeGen.h  NativeProperties.h  PropertyCodeGenData.h  PropertySettingsPropertyCodeGen.h  PropertySettingsPropertyRule.h  RangePropertyRule.h  TestPropertyRule.h
Refureku/Generator/LibraryGenerator/: CMakeLists.txt  main.cpp
Refureku/Generator/Source/: FileGenerator.cpp  FileParser.cpp  GeneratedClassCodeTemplate.cpp  GeneratedCodeTemplate.cpp  GeneratedEntityCodeTemplate.cpp  GeneratedEnumCodeTemplate.cpp  GeneratedFunctionCodeTemplate.cpp  GeneratedNamespaceCodeTemplate.cpp  GeneratedVariableCodeTemplate.cpp  main.cpp
Refureku/Generator/Source/CodeGen/: CodeGenManager.cpp  FileGenerationUnit.cpp  FileGenerator.cpp  FileParser.cpp  GeneratedClassCodeTemplate.cpp  GeneratedEntityCodeTemplate.cpp  GeneratedEnumCodeTemplate.cpp  GeneratedFunctionCodeTemplate.cpp  GeneratedNamespaceCodeTemplate.cpp  GeneratedVariableCodeTemplate.cpp  MacroCodeGenUnitSettings.cpp  ReflectionCodeGenModule.cpp  ReflectionCodeGenModule2.cpp
Refureku/Generator/Source/Parsing/: FileParser.cpp  FileParserFactory.cpp
Refureku/Generator/Source/Properties/: CustomInstantiatorPropertyCodeGen.cpp  CustomInstantiatorPropertyRule.cpp  DefaultComplexPropertyRule.cpp  DefaultSimplePropertyRule.cpp  DynamicGetArchetypePropertyRule.cpp  InstantiatorPropertyCodeGen.cpp  PropertySettingsPropertyCodeGen.cpp  PropertySettingsPropertyRule.cpp  RangePropertyRule.cpp  TestPropertyRule.cpp
Refureku/Generator/Source/Properties/CodeGenData/: PropertyCodeGenClassFooterData.cpp  PropertyCodeGenData.cpp  PropertyCodeGenFileFooterData.cpp  PropertyCodeGenFileHeaderData.cpp  PropertyCodeGenPropertyAddData.cpp
Refureku/Generator/Submodules/: .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Refureku/Generator/Submodules/.github/workflows/: run_tests_linux.yml  run_tests_windows.yml
Refureku/Generator/Submodules/Kodgen/: CMakeLists.txt  KodgenSettings.toml
Refureku/Generator/Submodules_Old/: CMakeLists.txt
Refureku/Generator/Submodules_Old/Kodgen/: CMakeLists.txt
Refureku/Include/: FileParser.h  GeneratedCodeTemplate.h  RefurekuMacros.h
Refureku/Source/: GeneratedCodeTemplate.cpp  main.cpp
(+532 files in other folders)
